objects/Physician__c.object
<CustomObject><fields>
        <fullName>Access_Token_Last_retrieved__c</fullName>
        <label>Access Token Last retrieved</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Auth_Code__c</fullName>
        <label>Auth Code</label>
        <length>3768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Calender_Id__c</fullName>
        <label>Calender Id</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Specialization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specialization</label>
        <referenceTo>Specialization__c</referenceTo>
        <relationshipLabel>Physicians</relationshipLabel>
        <relationshipName>Physicians</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Physician</label><nameField>
        <label>Physicians Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Physicians</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Specialization__c</columns>
        <columns>Calender_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>